feat: add basic scturture of JS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>     
       </header>
       <article class="article">
-        <section class="main-desc">
+        <!-- <section class="main-desc">
           <div class="main-desc__inner">
             <div class="main-desc__img">
               <img class="main-desc__img-item" src="assets/img/img-rain.png" alt="weather">
@@ -42,7 +42,7 @@
               <li class="desc__item"><p class="desc__item-text">Partly Cloudy</p></li>
             </ul>
           </div>
-        </section>
+        </section> -->
       </article>
     </div>
   </main>
