feat: add form feature and fix styles

--- a/index.html
+++ b/index.html
@@ -18,31 +18,17 @@
           </div>
         </div>     
       </header>
+      <section class="form">
+        <div class="form__inner">
+          <form class="form__item" name="form">
+            <fieldset class="form__fieldset">
+              <input type="text" class="form__input" name="text" placeholder="Enter the city">
+              <button class="form__btn" type="submit">Enter</button>
+            </fieldset>
+          </form>
+        </div>
+      </section>
       <article class="article">
-        <!-- <section class="main-desc">
-          <div class="main-desc__inner">
-            <div class="main-desc__img">
-              <img class="main-desc__img-item" src="assets/img/img-rain.png" alt="weather">
-            </div>
-              <ul class="main-desc__list">
-                <li class="main-desc__item"><p class="main-desc__item-text">Kharkov</p></li>
-                <li class="main-desc__item"><p class="main-desc__item-text">Jan 30</p></li>
-                <li class="main-desc__item"><p class="main-desc__item-text">13 pm</p></li>
-              </ul>
-          </div>
-        </section>
-        <section class="desc">
-          <div class="desc__inner">
-            <ul class="desc__list">
-              <li class="desc__item"><p class="desc__item-text">Humidity: 57%</p></li>
-              <li class="desc__item"><p class="desc__item-text">Pressure: 1015 hPa</p></li>
-              <li class="desc__item"><p class="desc__item-text">14 km/h SSE</p></li>
-              <li class="desc__item"><p class="desc__item-text">30&#8451;</p></li>
-              <li class="desc__item"><p class="desc__item-text">Feels like: 32&#8451;</p></li>
-              <li class="desc__item"><p class="desc__item-text">Partly Cloudy</p></li>
-            </ul>
-          </div>
-        </section> -->
       </article>
     </div>
   </main>
