fix: style and reorganization blocks

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
   <main class="page">
     <div class="wrapper">
+      <div id="video-bg">
+        <video width="100%" height="auto" preload="auto" autoplay="autoplay"
+        loop="loop">
+            <source src="assets/video/weather_5.mp4" type="video/mp4"></source>
+            <!-- <source src="bg/daisy-stock-webm-video.webm" type="video/webm"></source> -->
+        </video>
+    </div>
       <header class="header">
         <div class="header__inner">
           <div class="header__logo">
@@ -35,3 +42,5 @@
   <script src="assets/js/main.js"></script> 
 </body>
 </html>
+
+
