fix: js file with time-minute and add catch error, formatting style

--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
         <div class="form__inner">
           <form class="form__item" name="form">
             <fieldset class="form__fieldset">
-              <input type="text" class="form__input" name="text" placeholder="Enter the city">
+              <label class="form__label" for="city">Type the city:</label>
+              <input type="text" class="form__input" id="city" name="text" placeholder="Enter the city">
               <button class="form__btn" type="submit">Enter</button>
             </fieldset>
           </form>
         </div>
       </section>
-      <article class="article">
-      </article>
     </div>
   </main>
   <script src="assets/js/main.js"></script> 
