refactor: add formatting in css and create functions for time

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
           <form class="form__item" name="form">
             <fieldset class="form__fieldset">
               <label class="form__label" for="city">Type the city:</label>
+              <div class="form__list">
               <input type="text" class="form__input" id="city" name="text" placeholder="Enter the city">
               <button class="form__btn" type="submit">Enter</button>
+            </div>
             </fieldset>
           </form>
         </div>
