--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 <body>
   <main class="page">
     <div class="wrapper">
-      <div id="video-bg">
+      <div class="video-bg">
         <video width="100%" height="auto" preload="auto" autoplay="autoplay"
         loop="loop">
-            <source src="assets/video/weather_5.mp4" type="video/mp4"></source>
-            <!-- <source src="bg/daisy-stock-webm-video.webm" type="video/webm"></source> -->
+            <source src="assets/video/weather.mp4" type="video/mp4"></source>
         </video>
     </div>
       <header class="header">
